updated blog url

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ experience with <em>data analysis</em> and <em>quality assurance</em> (QA). Has 
 aspiration of been the mythical professional known as Data
 Scientist. When not talking about himself in the 3rd person, he can
 be found <a href="http://github.com/caynan">programming</a> or writing in his
-<a href="http://blog.caynanland.im">blog</a>.</p>
+<a href="https://www.caynan.org/">blog</a>.</p>
 </blockquote>
 
 <!-- <span id="forkongithub">
